Initial setup - Ranjith

--- a/wp-content/themes/learning_theme/style.css
+++ b/wp-content/themes/learning_theme/style.css
@@ -1,7 +1,7 @@
 /*
 Theme Name: Learning Theme
 Theme URI: http://example.com/learning-theme
-Author: Ranjith
+Author: Ranjith Web Developer
 Author URI: http://example.com
 Description: A custom WordPress theme for learning.
 Version: 1.0
